vlib/v/checker/tests/option_alias_result_type_err.out
vlib/v/checker/tests/option_alias_result_type_err.vv:13:13: error: the fn returns type `!Bar`, but type `Bar` is an Option alias, you can not mix them
   11 | }
   12 | 
   13 | fn f(b Baz) !Bar {
      |             ~~~~
   14 |     match b {
   15 |         .nothing {
vlib/v/checker/tests/option_alias_result_type_err.vv:16:4: error: cannot use `none` as type `?Foo` in return argument
   14 |     match b {
   15 |         .nothing {
   16 |             return none
      |             ~~~~~~~~~~~
   17 |         }
   18 |         .value {
vlib/v/checker/tests/option_alias_result_type_err.vv:24:4: error: cannot use `none` as type `?Foo` in return argument
   22 |         }
   23 |         else {
   24 |             return none
      |             ~~~~~~~~~~~
   25 |         }
   26 |     }
